     NUT and apcupsd as competing implementations of the same features) which
     required clumsy workarounds to get both installed and running. Finally,
     there is a small matter of long-term viability of that approach: last
     commits to apcupsd sources were in 2017 (with last release 3.14.14 in
     May 2016): https://sourceforge.net/p/apcupsd/svn/HEAD/tree/

 - NUT for Windows:
   * Ability to build NUT for Windows, last tackled with a branch based on
     NUT v2.6.5 a decade ago, has been revived with the 2.8.x era codebase [#5].
     It is known that at this time some features are not complete, for more
     details see https://github.com/orgs/networkupstools/projects/2/views/1
   * Cross-builds of NUT for Windows using Linux and MinGW (and many custom
     built dependency packages, as documented in link:scripts/Windows/README[])
     are now regularly tested on NUT CI farm with moderate integration via
     custom build script `scripts/Windows/build-mingw-nut.sh` [#1489]
   * Semi-native NUT for Windows builds with MSYS2/MinGW x64 environment are
     now regularly tested on AppVeyor, with the same `ci_build.sh` script and
     `Makefile` checks as used across the board for local developer builds,
     Linux/illumos/FreeBSD/OpenBSD/... on dedicated NUT CI farm on Fosshost,
     and MacOS on CircleCI [#1552]

 - snmp-ups updates:
   * Fixed detection for device agents which wrongly return the sysOID value
     as a string instead of an OID [#1710]
   * Clearer messages about skipping MIBs during driver initialization [#2037]
   * IETF MIB mapping updated for data points where negative readings
     are invalid [#1558]
   * Added SNMP subdriver "apc-epdu-mib" for APC easy PDU support [#1674]
   * Added SNMP subdriver "eaton-pdu-nlogic-mib" for nLogic (rebranded Eaton)
     support [#1698]
   * Added SNMP subdriver "hpe-pdu3-cis-mib" for HPE G2 Metered & Switched PDU
     initial "unitary" support (no daisychain support yet); also note that due