@@ -217,6 +217,12 @@ as part of https://github.com/networkupstools/nut/issues/1410 solution.
      commits to apcupsd sources were in 2017 (with last release 3.14.14 in
      May 2016): https://sourceforge.net/p/apcupsd/svn/HEAD/tree/
 
+  - dummy-ups:
+    * added an `repeater_disable_strict_start` option to disable the driver
+      exiting upon encountering any kind of error at startup (as repeater).
+      This option should allow for collective `upsdrvctl` startup despite
+      individual target UPS to be repeated or `upsd` not having come up yet.
+
  - NUT for Windows:
    * Ability to build NUT for Windows, last tackled with a branch based on
      NUT v2.6.5 a decade ago, has been revived with the 2.8.x era codebase [#5].
